Added Plugin via dynamic library support!

--- a/Eureka_build_log.html
+++ b/Eureka_build_log.html
@@ -4,14 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>11-08-2014 at 16:35.27</u><br />
-Build ended on: <u>11-08-2014 at 16:35.31</u><p />
+Build started on: <u>11-08-2014 at 22:17.23</u><br />
+Build ended on: <u>11-08-2014 at 22:17.41</u><p />
 <b>-------------- Build: Debug in Eureka (compiler: GNU GCC Compiler)---------------</b><br />
-mingw32-g++.exe  -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -I"Dependencies and tools\SDL2-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include" -I"Dependencies and tools\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\lua-5.2.3\src"  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\pywrap.cpp -o .objs\pywrap.o<br />
+mingw32-g++.exe  -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -I"Dependencies and tools\SDL2-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include" -I"Dependencies and tools\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\lua-5.2.3\src"  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\Eureka_lua.cxx -o .objs\Eureka_lua.o<br />
+mingw32-g++.exe  -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -I"Dependencies and tools\SDL2-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include" -I"Dependencies and tools\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\lua-5.2.3\src"  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\Eureka_wrap.cxx -o .objs\Eureka_wrap.o<br />
+mingw32-g++.exe  -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -I"Dependencies and tools\SDL2-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include" -I"Dependencies and tools\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2" -I"Dependencies and tools\lua-5.2.3\src"  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\plugin.cpp -o .objs\plugin.o<br />
 mingw32-g++.exe -L"C:\Program Files\CodeBlocks\MinGW\lib" -Lc:\Python27\libs -L"Dependencies and tools\SDL2-2.0.0\i686-w64-mingw32\lib" -L"Dependencies and tools\SDL_ttf-2.0.11\SDL_ttf-2.0.11\lib\x86" -L"Dependencies and tools\SDL2_mixer-2.0.0\i686-w64-mingw32\lib" -L"Dependencies and tools\SDL2_image-2.0.0\i686-w64-mingw32\lib" -L"Dependencies and tools\lua-5.2.3\src"  -o bin\Eureka.exe .objs\button.o .objs\conversion.o .objs\data_base.o .objs\draw_base.o .objs\Eureka_lua.o .objs\Eureka_wrap.o .objs\game.o .objs\input.o .objs\level.o .objs\luawrap.o .objs\main.o .objs\physics.o .objs\plugin.o .objs\progressbar.o .objs\pywrap.o .objs\scriptwrap.o .objs\sound_base.o .objs\textbox.o .objs\Timer.o .objs\trigger.o .objs\ui.o .objs\unit.o    -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL_ttf -lSDL2_image -llua<br />
-Output size is 4.76 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 3 seconds)</font><br />
-<font color="#0000ff">0 errors, 0 warnings (0 minutes, 3 seconds)</font><br />
+Output size is 4.78 MB<br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 18 seconds)</font><br />
+<font color="#0000ff">0 errors, 0 warnings (0 minutes, 18 seconds)</font><br />
 </tt>
 </body>
 </html>
