--- a/Eureka_build_log.html
+++ b/Eureka_build_log.html
@@ -4,14 +4,25 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>21-09-2014 at 22:04.07</u><br />
-Build ended on: <u>21-09-2014 at 22:04.12</u><p />
+Build started on: <u>26-09-2014 at 20:42.53</u><br />
+Build ended on: <u>26-09-2014 at 20:43.05</u><p />
 <b>-------------- Build: Debug in Eureka (compiler: GNU GCC Compiler)---------------</b><br />
-mingw32-g++.exe  -std=c++0x -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -IDependencies\SDL2-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include -IDependencies\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\lua-5.2.3\src -IDependencies\sqlite3 -IDependencies\mysql-connector-c-6.1.5-win32\include -IDependencies\mysql-connector-c++-noinstall-1.1.4-win32\include -I..\..\..\..\..\MinGW\msys\1.0\local\include\boost -I..\..\..\..\..\MinGW\msys\1.0\local\include  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\mysql.cpp -o .objs\mysql.o<br />
-mingw32-g++.exe -L"C:\Program Files\CodeBlocks\MinGW\lib" -Lc:\Python27\libs -LDependencies\SDL2-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL_ttf-2.0.11\SDL_ttf-2.0.11\lib\x86 -LDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_image-2.0.0\i686-w64-mingw32\lib -LDependencies\lua-5.2.3\src -LDependencies\sqlite3\win32_lib -LDependencies\mysql-connector-c-6.1.5-win32\lib -LDependencies\mysql-connector-c++-noinstall-1.1.4-win32\lib -L..\..\..\..\..\MinGW\msys\1.0\local\lib  -o bin\Eureka.exe .objs\button.o .objs\conversion.o .objs\data_base.o .objs\database.o .objs\draw_base.o .objs\Eureka_lua.o .objs\Eureka_wrap.o .objs\game.o .objs\input.o .objs\level.o .objs\luawrap.o .objs\main.o .objs\modadapter.o .objs\mysql.o .objs\physics.o .objs\plugin.o .objs\progressbar.o .objs\pywrap.o .objs\scriptwrap.o .objs\sound_base.o .objs\sqlite_error.o .objs\sqlite_row.o .objs\sqlitewrap.o .objs\sqlkeywords.o .objs\textbox.o .objs\Timer.o .objs\trigger.o .objs\ui.o .objs\unit.o    -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL_ttf -lSDL2_image -llua -lsqlite3 -lmysqlcppconn<br />
-Output size is 6.02 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minutes, 5 seconds)</font><br />
-<font color="#0000ff">0 errors, 0 warnings (0 minutes, 5 seconds)</font><br />
+mingw32-g++.exe  -std=c++0x -g    -I"C:\Program Files\CodeBlocks\MinGW\include" -Ic:\Python27\include -IDependencies\SDL2-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL_ttf-2.0.11\SDL_ttf-2.0.11\include -IDependencies\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\lua-5.2.3\src -IDependencies\sqlite3 -IDependencies\mysql-connector-c-6.1.5-win32\include -IDependencies\mysql-connector-c++-noinstall-1.1.4-win32\include -I..\..\..\..\..\MinGW\msys\1.0\local\include\boost -I..\..\..\..\..\MinGW\msys\1.0\local\include  -c C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\database.cpp -o .objs\database.o<br />
+In file included from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\data_base.h:23:0,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\draw_base.h:5,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\textbox.h:5,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\ui.h:7,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\game.h:12,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\sqlitewrap.h:10,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\database.h:4,<br />
+                 from C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\database.cpp:1:<br />
+<font color="#0000ff">C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\conversion.h:24:2: warning: #warning "Notice, if you want to access the utf8 conversion functions, you are required to add the utfcpp library/headers" [-Wcpp]</font><br />
+<font color="#0000ff">C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\conversion.h:25:2: warning: #warning "to your project and define the macro UTF8_NEEDED in the included config.h header! You may find the library at" [-Wcpp]</font><br />
+<font color="#0000ff">C:\Users\Kiseitai2\Documents\DevCB\Engine_Eureka\conversion.h:26:2: warning: #warning "http://utfcpp.sourceforge.net/" [-Wcpp]</font><br />
+mingw32-g++.exe -L"C:\Program Files\CodeBlocks\MinGW\lib" -Lc:\Python27\libs -LDependencies\SDL2-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL_ttf-2.0.11\SDL_ttf-2.0.11\lib\x86 -LDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_image-2.0.0\i686-w64-mingw32\lib -LDependencies\lua-5.2.3\src -LDependencies\sqlite3\win32_lib -LDependencies\mysql-connector-c-6.1.5-win32\lib -LDependencies\mysql-connector-c++-noinstall-1.1.4-win32\lib -L..\..\..\..\..\MinGW\msys\1.0\local\lib  -o bin\Eureka.exe .objs\button.o .objs\conversion.o .objs\data_base.o .objs\database.o .objs\draw_base.o .objs\Eureka_lua.o .objs\Eureka_wrap.o .objs\game.o .objs\info.o .objs\input.o .objs\level.o .objs\luawrap.o .objs\main.o .objs\modadapter.o .objs\mysql.o .objs\physics.o .objs\plugin.o .objs\progressbar.o .objs\pywrap.o .objs\scriptwrap.o .objs\sound_base.o .objs\sqlite_error.o .objs\sqlite_row.o .objs\sqlitewrap.o .objs\sqlkeywords.o .objs\textbox.o .objs\Timer.o .objs\trigger.o .objs\ui.o .objs\unit.o    -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL_ttf -lSDL2_image -llua -lsqlite3 -lmysqlcppconn<br />
+Output size is 6.31 MB<br />
+<font color="#0000ff">Process terminated with status 0 (0 minutes, 11 seconds)</font><br />
+<font color="#0000ff">0 errors, 3 warnings (0 minutes, 11 seconds)</font><br />
 </tt>
 </body>
 </html>
