--- a/Eureka_build_log.html
+++ b/Eureka_build_log.html
@@ -4,14 +4,19 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>15-02-2016 at 15:35.43</u><br />
-Build ended on: <u>15-02-2016 at 15:35.44</u><p />
+Build started on: <u>22-02-2016 at 19:33.33</u><br />
+Build ended on: <u>22-02-2016 at 19:33.36</u><p />
 <b>-------------- Build: Eureka in Eureka (compiler: GNU GCC Compiler)---------------</b><br />
+mingw32-g++.exe -std=c++11 -g -ftrapv -D__STDC_CONSTANT_MACROS -Ic:\Python27\include -IDependencies\SDL2-2.0.0\include -IDependencies\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_ttf-2.0.12\i686-w64-mingw32\include\SDL2 -IDependencies\lua-5.2.3\src -IDependencies\sqlite3 -IDependencies\mysql-connector-c-6.1.5-win32\include -IDependencies\mysql-connector-c++-noinstall-1.1.4-win32\include -IDependencies\libFFmpeg\include -IDependencies\CRC -IDependencies\SDL2_net-2.0.0\i686-w64-mingw32\include\SDL2 -I..\..\..\..\..\MinGW\msys\1.0\local\include\boost -I..\..\..\..\..\MinGW\msys\1.0\local\include -I"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\include\boost" -I"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\include" -c C:\Users\Luis\Documents\DevCB\Engine_Eureka\game.cpp -o .objs\game.o<br />
+In file included from C:\Users\Luis\Documents\DevCB\Engine_Eureka\eureka.h:16:0,<br />
+                 from C:\Users\Luis\Documents\DevCB\Engine_Eureka\game.cpp:2:<br />
+<font color="#0000ff">C:\Users\Luis\Documents\DevCB\Engine_Eureka\input.h:25:1: warning: 'typedef' was ignored in this declaration [enabled by default]</font><br />
+<font color="#0000ff">C:\Users\Luis\Documents\DevCB\Engine_Eureka\input.h:41:2: warning: 'typedef' was ignored in this declaration [enabled by default]</font><br />
 mingw32-g++.exe -shared -Wl,--output-def=bin\engine\libEureka.def -Wl,--out-implib=bin\engine\libEureka.a -Wl,--dll -Lc:\Python27\libs -LDependencies\SDL2-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_image-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_ttf-2.0.12\i686-w64-mingw32\lib -LDependencies\lua-5.2.3\src -LDependencies\sqlite3\win32_lib -LDependencies\mysql-connector-c-6.1.5-win32\lib -LDependencies\mysql-connector-c++-noinstall-1.1.4-win32\lib -LDependencies\libFFmpeg\lib -LDependencies\CRC -LDependencies\SDL2_net-2.0.0\i686-w64-mingw32\lib -L..\..\..\..\..\MinGW\msys\1.0\local\lib -L"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\lib" -Lbin\engine -LDependencies\libFFmpeg\lib -LDependencies\cmd_processor\lib\Release .objs\game.o .objs\layersystem.o .objs\level.o .objs\triggermanager.o .objs\videoplayer.o  -o bin\engine\Eureka.dll  -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL2_ttf -lSDL2_image -llua -lsqlite3 -lmysqlcppconn -lSDL2_net -lpthread -lCore -lplugins -lUI -lIO -lthreading -lnetwork -lTimer -lFlags -lUnit -lSound -lavutil -lswscale -lavformat -lavdevice -lavcodec -lCMD_Processor -lInput<br />
 Creating library file: bin\engine\libEureka.a<br />
 Output file is bin\engine\Eureka.dll with size 3.58 MB<br />
-<font color="#0000ff">Process terminated with status 0 (0 minute(s), 1 second(s))</font><br />
-<font color="#0000ff">0 error(s), 0 warning(s) (0 minute(s), 1 second(s))</font><br />
+<font color="#0000ff">Process terminated with status 0 (0 minute(s), 3 second(s))</font><br />
+<font color="#0000ff">0 error(s), 2 warning(s) (0 minute(s), 3 second(s))</font><br />
 </tt>
 </body>
 </html>
