Added a command line parser to the engine
Also, added a standard stream redirection system (cout, cin, cerr).
Updated the locale unit test to further showcase the command line parser
(it can now be used as a standalone utility on top of being a test :D)
Added the CMD_Processor driver as the unit test for the command line
parser!

--- a/Eureka_build_log.html
+++ b/Eureka_build_log.html
@@ -4,13 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>21-04-2016 at 16:21.55</u><br />
-Build ended on: <u>21-04-2016 at 16:21.56</u><p />
-<b>-------------- Build: IO in Eureka (compiler: GNU GCC Compiler)---------------</b><br />
-mingw32-g++.exe -std=c++11 -g -ftrapv -D__STDC_CONSTANT_MACROS -Ic:\Python27\include -IDependencies\SDL2-2.0.0\include -IDependencies\SDL2_image-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\include\SDL2 -IDependencies\SDL2_ttf-2.0.12\i686-w64-mingw32\include\SDL2 -IDependencies\lua-5.2.3\src -IDependencies\sqlite3 -IDependencies\mysql-connector-c-6.1.5-win32\include -IDependencies\mysql-connector-c++-noinstall-1.1.4-win32\include -IDependencies\libFFmpeg\include -IDependencies\CRC -IDependencies\SDL2_net-2.0.0\i686-w64-mingw32\include\SDL2 -I..\..\..\..\..\MinGW\msys\1.0\local\include\boost -I..\..\..\..\..\MinGW\msys\1.0\local\include -I"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\include\boost" -I"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\include" -c C:\Users\Luis\Documents\DevCB\Engine_Eureka\localesystem.cpp -o .objs\localesystem.o<br />
-mingw32-g++.exe -shared -Wl,--output-def=bin\engine\libIO.def -Wl,--out-implib=bin\engine\libIO.a -Wl,--dll -Lc:\Python27\libs -LDependencies\SDL2-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_image-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_ttf-2.0.12\i686-w64-mingw32\lib -LDependencies\lua-5.2.3\src -LDependencies\sqlite3\win32_lib -LDependencies\mysql-connector-c-6.1.5-win32\lib -LDependencies\mysql-connector-c++-noinstall-1.1.4-win32\lib -LDependencies\libFFmpeg\lib -LDependencies\CRC -LDependencies\SDL2_net-2.0.0\i686-w64-mingw32\lib -L..\..\..\..\..\MinGW\msys\1.0\local\lib -L"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\lib" -Lbin\engine .objs\iomanager.o .objs\localesystem.o  -o bin\engine\IO.dll  -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL2_ttf -lSDL2_image -llua -lsqlite3 -lmysqlcppconn -lSDL2_net -lpthread -lCore -lthreading<br />
-Creating library file: bin\engine\libIO.a<br />
-Output file is bin\engine\IO.dll with size 1.64 MB<br />
+Build started on: <u>25-04-2016 at 21:00.57</u><br />
+Build ended on: <u>25-04-2016 at 21:00.58</u><p />
+<b>-------------- Build: LuaWrap in Eureka (compiler: GNU GCC Compiler)---------------</b><br />
+mingw32-g++.exe -shared -Wl,--output-def=bin\engine\liblua_wrap.def -Wl,--out-implib=bin\engine\liblua_wrap.a -Wl,--dll -Lc:\Python27\libs -LDependencies\SDL2-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_mixer-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_image-2.0.0\i686-w64-mingw32\lib -LDependencies\SDL2_ttf-2.0.12\i686-w64-mingw32\lib -LDependencies\lua-5.2.3\src -LDependencies\sqlite3\win32_lib -LDependencies\mysql-connector-c-6.1.5-win32\lib -LDependencies\mysql-connector-c++-noinstall-1.1.4-win32\lib -LDependencies\libFFmpeg\lib -LDependencies\CRC -LDependencies\SDL2_net-2.0.0\i686-w64-mingw32\lib -L..\..\..\..\..\MinGW\msys\1.0\local\lib -L"..\..\..\..\..\Program Files (x86)\CodeBlocks\MinGW\msys\1.0\local\lib" -Lbin\engine -LDependencies\cmd_processor\lib\Release .objs\luawrap.o  -o bin\engine\lua_wrap.dll  -lmingw32 -lSDL2main -lSDL2.dll -lSDL2_mixer -lpython27 -lSDL2_ttf -lSDL2_image -llua -lsqlite3 -lmysqlcppconn -lSDL2_net -lpthread -l_EE<br />
+Creating library file: bin\engine\liblua_wrap.a<br />
+Output file is bin\engine\lua_wrap.dll with size 1.29 MB<br />
 <font color="#0000ff">Process terminated with status 0 (0 minute(s), 1 second(s))</font><br />
 <font color="#0000ff">0 error(s), 0 warning(s) (0 minute(s), 1 second(s))</font><br />
 </tt>
